@startuml

title __CONTROLLER's Class Diagram__\n

  namespace it.almaviva.eai.zeebe.usertask {
    namespace controller {
      class it.almaviva.eai.zeebe.usertask.controller.AdminController {
          {static} - log : Logger
          + changeClaimTask()
          + disclaimTask()
          + listTasks()
      }
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask {
    namespace controller {
      class it.almaviva.eai.zeebe.usertask.controller.UserController {
          {static} + VARNAME_CANDIDATE_GROUPS : String
          {static} + VARNAME_CANDIDATE_USERS : String
          {static} - log : Logger
          - zeebeClient : ZeebeClient
          + claimTask()
          + completeTask()
          + listTaskByAssignee()
          + listTaskByClaimable()
          {static} - convertList()
      }
    }
  }
  

  it.almaviva.eai.zeebe.usertask.controller.AdminController o-- it.almaviva.eai.zeebe.usertask.port.incoming.ITaskUseCase : iTaskUseCase
  it.almaviva.eai.zeebe.usertask.controller.UserController o-- it.almaviva.eai.zeebe.usertask.port.incoming.ITaskUseCase : iTaskUseCase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
